--- a/tests/templates/post.handlebars
+++ b/tests/templates/post.handlebars
@@ -3,6 +3,20 @@
 <h1>{{metadata.title}}</h1>
 <div>{{{content}}}</div>
 <p class="date">Written on the {{metadata.date}}.</p>
-TODO reddit and hacker news links
+{{#if metadata.hacker_news}}
+  <p class="comments">
+    {{#if metadata.reddit}}
+      Comments on <a href="{{metadata.hacker_news}}">Hacker News</a> or <a href="{{metadata.reddit}}">Reddit</a>.
+    {{else}}
+      Comments on <a href="{{metadata.hacker_news}}">Hacker News</a>.
+    {{/if}}
+  </p>
+{{else}}
+  {{#if metadata.reddit}}
+    <p class="comments">
+      Comments on <a href="{{metadata.reddit}}">Reddit</a>.
+    </p>
+  {{/if}}
+{{/if}}
 </div>
 {{> footer}}
